[package]
name = "brigade-sdk-for-rust"
version = "0.1.0"
authors = ["Radu M <root@radu.sh>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_with = "1.6"
serde = { version = "1.0.100", features = ["derive"] }
reqwest = { version = "0.11", default-features = true, features = ["json"] }
base64 = "0.13.0"
hyper = "0.14"
hyper-tls = "0.5"
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.6"
futures = "0.3"
url = "2.2.0"
